tests/toylang/neg/001693_mutation.toylang
program a = { while sleep a do sleep; } .
